# akash_assignments

./: Assignment.cpp  CMakeLists.txt  Combinational-Circuits.pptx  Deep_copy.cpp  MICROCONTROLLER-8051.pptx  MICROPROCESSOR-8085.pptx  Operator_overloading.cpp  SEQUENTIAL.pptx  SOC.pptx  STL-algorithms.cpp  STL-associative.cpp  STL-container-Copy.cpp  STL-container-adapter.cpp  VLSI.pptx  arrays.c  assign1.cpp  assign2.cpp  assign3_template.cpp  bitfield.c  bitfield.cpp  circular.cpp  copy-constructor.cpp  data-type.c  deletion.cpp  dynamic.cpp  explicit.cpp  full-adder.cpp  func-pointers.cpp  functors.cpp  half-adder.cpp  interface.cpp  linked-list.c  linked-list.cpp  multilevel.cpp  multiple.cpp  object-slicing.cpp  ostream.cpp  para-constructor.cpp  pow.cpp  queue.cpp  (+14 more)
.github/workflows/: ccpp.yml
SystemC/: RUD.doc  SPI.cpp  Serial Peripheral Interface(SPI).pptx  and_s.cpp  demux.cpp  hello.cpp  mux.cpp  not_s.cpp  or_nand.cpp  or_s.cpp  producer_consumer.cpp  xor.cpp
