cmake_minimum_required(VERSION 3.10)	

set(ASSIGNMENT_SOURCE1 structure-class.cpp)
add_executable(assign1 ${ASSIGNMENT_SOURCE1})

set(ASSIGNMENT_SOURCE2 structure-class-inherit.cpp)
add_executable(assign2 ${ASSIGNMENT_SOURCE2})

 
set(ASSIGNMENT_SOURCE3 copy-constructor.cpp)
add_executable(assign3 ${ASSIGNMENT_SOURCE3})


set(ASSIGNMENT_SOURCE4 Operator_overloading.cpp)
add_executable(assign4 ${ASSIGNMENT_SOURCE4})


set(ASSIGNMENT_SOURCE5 para-constructor.cpp)
add_executable(assign5 ${ASSIGNMENT_SOURCE5})


set(ASSIGNMENT_SOURCE6 singleton.cpp)
add_executable(assign6 ${ASSIGNMENT_SOURCE6})


set(ASSIGNMENT_SOURCE7 multilevel.cpp)
add_executable(assign7 ${ASSIGNMENT_SOURCE7})

set(ASSIGNMENT_SOURCE8 multiple.cpp)
add_executable(assign8 ${ASSIGNMENT_SOURCE8})

set(ASSIGNMENT_SOURCE9 ostream.cpp)
add_executable(assign9 ${ASSIGNMENT_SOURCE9})

set(ASSIGNMENT_SOURCE10 virtual.cpp)
add_executable(assign10 ${ASSIGNMENT_SOURCE10})

set(ASSIGNMENT_SOURCE11 template.cpp)
add_executable(assign11 ${ASSIGNMENT_SOURCE11})

set(ASSIGNMENT_SOURCE12 template-function.cpp)
add_executable(assign12 ${ASSIGNMENT_SOURCE12})

set(ASSIGNMENT_SOURCE13 linked-list.cpp)
add_executable(assign13 ${ASSIGNMENT_SOURCE13})

set(ASSIGNMENT_SOURCE14 stack.cpp)
add_executable(assign14 ${ASSIGNMENT_SOURCE14})

set(ASSIGNMENT_SOURCE15 queue.cpp)
add_executable(assign15 ${ASSIGNMENT_SOURCE15})

set(ASSIGNMENT_SOURCE16 linked-list.c)
add_executable(assign16 ${ASSIGNMENT_SOURCE16})

set(ASSIGNMENT_SOURCE17 circular.cpp)
add_executable(assign17 ${ASSIGNMENT_SOURCE17})

set(ASSIGNMENT_SOURCE18 typecasting.cpp)
add_executable(assign18 ${ASSIGNMENT_SOURCE18})

set(ASSIGNMENT_SOURCE19 explicit.cpp)
add_executable(assign19 ${ASSIGNMENT_SOURCE19})

set(ASSIGNMENT_SOURCE20 interface.cpp)
add_executable(assign20 ${ASSIGNMENT_SOURCE20})

set(ASSIGNMENT_SOURCE21 dynamic.cpp)
add_executable(assign21 ${ASSIGNMENT_SOURCE21})

set(ASSIGNMENT_SOURCE22 object-slicing.cpp)
add_executable(assign22 ${ASSIGNMENT_SOURCE22})

set(ASSIGNMENT_SOURCE23 virtual-destructor.cpp)
add_executable(assign23 ${ASSIGNMENT_SOURCE23})

set(ASSIGNMENT_SOURCE24 STL-algorithms.cpp)
add_executable(assign24 ${ASSIGNMENT_SOURCE24})

set(ASSIGNMENT_SOURCE25 STL-associative.cpp)
add_executable(assign25 ${ASSIGNMENT_SOURCE25})

set(ASSIGNMENT_SOURCE26 STL-container.cpp)
add_executable(assign26 ${ASSIGNMENT_SOURCE26})

set(ASSIGNMENT_SOURCE27 STL-container-adapter.cpp)
add_executable(assign27 ${ASSIGNMENT_SOURCE27})

set(ASSIGNMENT_SOURCE28 vector-add.c)
add_executable(assign28 ${ASSIGNMENT_SOURCE28})

set(ASSIGNMENT_SOURCE29 stack.c)
add_executable(assign29 ${ASSIGNMENT_SOURCE29})

set(ASSIGNMENT_SOURCE30 full-adder.cpp)
add_executable(assign30 ${ASSIGNMENT_SOURCE30})

set(ASSIGNMENT_SOURCE31 half-adder.cpp)
add_executable(assign31 ${ASSIGNMENT_SOURCE31})

set(ASSIGNMENT_SOURCE32 bitfield.c)
add_executable(assign32 ${ASSIGNMENT_SOURCE32})

set(ASSIGNMENT_SOURCE33 bitfield.cpp)
add_executable(assign33 ${ASSIGNMENT_SOURCE33})

set(ASSIGNMENT_SOURCE34 union.cpp)
add_executable(assign34 ${ASSIGNMENT_SOURCE34})

set(ASSIGNMENT_SOURCE35 pow.cpp)
add_executable(assign35 ${ASSIGNMENT_SOURCE35})

set(ASSIGNMENT_SOURCE36 data-type.c)
add_executable(assign36 ${ASSIGNMENT_SOURCE36})

set(ASSIGNMENT_SOURCE37 arrays.c)
add_executable(assign37 ${ASSIGNMENT_SOURCE37})

set(ASSIGNMENT_SOURCE38 functors.cpp)
add_executable(assign38 ${ASSIGNMENT_SOURCE38})

set(ASSIGNMENT_SOURCE39 func-pointers.cpp)
add_executable(assign39 ${ASSIGNMENT_SOURCE39})

